--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
 <p><a href="https://circleci.com/gh/Oblivious-Oblivious/skeleton"><img src="https://circleci.com/gh/Oblivious-Oblivious/skeleton.svg?style=shield" alt="CircleCI"/></a>
 <a href="https://github.com/Oblivious-Oblivious/skeleton/actions?query=workflow%3ACI"><img src="https://github.com/Oblivious-Oblivious/skeleton/workflows/CI/badge.svg" alt="CI"/></a>
-<a href="https://github.com/Oblivious-Oblivious/skeleton/actions?query=workflow%3A%22CI+%28nightly%29%22"><img src="https://github.com/Oblivious-Oblivious/skeleton/workflows/CI%20(nightly)/badge.svg" alt="CI (nightly)"/>/badge.svg)</a></p>
+<a href="https://github.com/Oblivious-Oblivious/skeleton/actions?query=workflow%3A%22CI+%28nightly%29%22"><img src="https://github.com/Oblivious-Oblivious/skeleton/workflows/CI%20(nightly)/badge.svg" alt="CI (nightly)"/></a></p>
 
 <p>A very minimal http server api serving as a platform for incremental middleware.</p>
 
