--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <script type="text/javascript" src="js/doc.js"></script>
 
   <meta name="repository-name" content="skeleton">
-  <title>skeleton master-dev</title>
+  <title>Skeleton Documentation</title>
   <script type="text/javascript">
   CrystalDocs.base_path = "";
   </script>
