--- a/index.html
+++ b/index.html
@@ -231,17 +231,16 @@
   </svg>
 </a>Installation</h2>
 
-<ol><li>Add the dependency to your <code>shard.yml</code>:</li></ol>
+<ol>
+<li>Add the dependency to your <code>shard.yml</code>:</li>
 
-<p><code></code>
-   dependencies:</p>
+<pre><code class="language-crystal">dependencies:
+  skeleton:
+    github: Oblivious-Oblivious/skeleton
+</code></pre>
 
-<pre><code class="language-crystal"> skeleton:
-   github: Oblivious-Oblivious/skeleton</code></pre>
-
-<p><code></code></p>
-
-<ol><li>Run <code>shards install</code></li></ol>
+<li>Run <code>shards install</code></li>
+</ol>
 
 <h2><a id="usage" class="anchor" href="#usage">
   <svg class="octicon-link" aria-hidden="true">
